--- a/configuracion.html
+++ b/configuracion.html
@@ -65,7 +65,7 @@
     <div id="sidebar-container"></div>
 
     <!-- MAIN CONTENT -->
-    <main class="flex-1 ml-64 p-10 space-y-8 min-w-0 overflow-y-auto">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0 overflow-y-auto">
         <header class="flex flex-col gap-1">
             <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Configuración del Sistema</h1>
             <p class="text-gray-400 font-medium">Administra comisiones, metas y usuarios.</p>
@@ -93,7 +93,7 @@
 
         <!-- COMISIONES -->
         <div id="content-comisiones" class="tab-content active space-y-6 max-w-4xl">
-            <div class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100">
+            <div class="bg-white p-4 lg:p-8 rounded-2xl shadow-sm border border-gray-100">
                 <div class="flex justify-between items-center mb-6">
                     <h3 class="text-xl font-bold">Porcentajes de Comisión</h3>
                     <button onclick="guardarComisiones()"
@@ -111,7 +111,7 @@
 
         <!-- METAS -->
         <div id="content-metas" class="tab-content space-y-6 max-w-2xl">
-            <div class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100">
+            <div class="bg-white p-4 lg:p-8 rounded-2xl shadow-sm border border-gray-100">
                 <h3 class="text-xl font-bold mb-6">Meta de Ingresos Mensual</h3>
 
                 <div class="flex flex-col gap-6 mb-8">
@@ -189,7 +189,7 @@
 
         <!-- CONTROL DE EFECTIVO -->
         <div id="content-efectivo" class="tab-content space-y-6 max-w-2xl">
-            <div class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100">
+            <div class="bg-white p-4 lg:p-8 rounded-2xl shadow-sm border border-gray-100">
                 <h3 class="text-xl font-bold mb-6">Configuración de Efectivo</h3>
 
                 <div class="space-y-4">
@@ -230,7 +230,7 @@
     <!-- MODAL USUARIO -->
     <div id="modalUsuario"
         class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden z-[100] flex items-center justify-center opacity-0 transition-opacity duration-300">
-        <div class="bg-white w-full max-w-md rounded-2xl shadow-2xl transform scale-95 transition-all duration-300 p-8">
+        <div class="bg-white w-full max-w-md rounded-2xl shadow-2xl transform scale-95 transition-all duration-300 p-4 lg:p-8">
             <h3 class="text-2xl font-bold mb-1">Usuario</h3>
             <p class="text-xs text-gray-400 font-bold uppercase tracking-wider mb-6">Credenciales de Acceso</p>
 
