--- a/control_efectivo.html
+++ b/control_efectivo.html
@@ -43,7 +43,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-10 space-y-8 min-w-0">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0">
 
         <header class="flex justify-between items-center">
             <div>
@@ -58,7 +58,7 @@
             </div>
         </header>
 
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:p-8">
 
             <!-- COLUMNA NORTE -->
             <div class="space-y-6">
