--- a/estado_resultados.html
+++ b/estado_resultados.html
@@ -91,7 +91,7 @@
     <div id="sidebar-container"></div>
 
     <!-- MAIN CONTENT -->
-    <main class="flex-1 ml-64 p-10 space-y-8 min-w-0 overflow-y-auto">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0 overflow-y-auto">
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Estado de Resultados</h1>
@@ -126,7 +126,7 @@
         <section class="space-y-4" id="resumenAnualSection">
             <h3 class="font-extrabold text-sm uppercase tracking-widest text-gray-500">Resumen Anual Acumulado</h3>
             <div id="resumenAnualContainer" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                <div class="text-center p-10 text-gray-400 italic col-span-full">Selecciona un año para ver el acumulado
+                <div class="text-center p-4 lg:p-10 text-gray-400 italic col-span-full">Selecciona un año para ver el acumulado
                 </div>
             </div>
         </section>
@@ -136,7 +136,7 @@
     <!-- MODAL CONFIRMACIÓN CIERRE -->
     <div id="modalCerrar"
         class="fixed inset-0 bg-black/50 backdrop-blur-sm hidden z-[100] flex items-center justify-center">
-        <div class="bg-white w-full max-w-md rounded-2xl shadow-2xl p-8">
+        <div class="bg-white w-full max-w-md rounded-2xl shadow-2xl p-4 lg:p-8">
             <div class="text-center mb-6">
                 <span class="material-symbols-outlined text-5xl text-emerald-500 mb-4">task_alt</span>
                 <h3 class="text-xl font-extrabold">¿Cerrar mes?</h3>
