--- a/flotilla.html
+++ b/flotilla.html
@@ -82,7 +82,7 @@
     <div id="sidebar-container"></div>
 
     <!-- MAIN CONTENT -->
-    <main class="flex-1 ml-64 p-10 space-y-8 min-w-0 overflow-y-auto">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0 overflow-y-auto">
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Control de Flotillas</h1>
@@ -108,7 +108,7 @@
     <div id="modalFlotilla"
         class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden z-[100] flex items-center justify-center opacity-0 transition-opacity duration-300">
         <div
-            class="bg-white w-full max-w-2xl rounded-2xl shadow-2xl transform scale-95 transition-all duration-300 p-8 max-h-[90vh] overflow-y-auto">
+            class="bg-white w-full max-w-2xl rounded-2xl shadow-2xl transform scale-95 transition-all duration-300 p-4 lg:p-8 max-h-[90vh] overflow-y-auto">
             <div class="flex justify-between items-center mb-8">
                 <div>
                     <h3 class="text-2xl font-extrabold tracking-tight" id="modalTitle">Nuevo Vehículo</h3>
