--- a/inversiones.html
+++ b/inversiones.html
@@ -63,7 +63,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-8 space-y-8">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-8 space-y-8">
         <header class="flex justify-between items-center">
             <div>
                 <nav class="text-[10px] font-bold text-gray-400 uppercase tracking-widest mb-1">Gestión Financiera /
@@ -115,7 +115,7 @@
             </div>
         </div>
 
-        <div class="grid grid-cols-12 gap-8">
+        <div class="grid grid-cols-12 gap-4 lg:p-8">
             <div class="col-span-8 card overflow-hidden flex flex-col">
                 <div class="p-6 border-b border-gray-100 flex justify-between items-center">
                     <h2 class="font-bold text-sm uppercase tracking-tight">Listado de Activos</h2>
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <aside class="col-span-4 card p-6 space-y-6 self-start sticky top-8">
+            <aside class="col-span-4 card p-6 space-y-6 self-start sticky top-4 lg:p-8">
                 <div class="flex items-center gap-2 text-primary">
                     <span class="material-symbols-outlined font-bold">add_box</span>
                     <h2 class="font-extrabold text-sm uppercase tracking-tight text-black">Nueva Inversión</h2>
