--- a/migrador_datos.html
+++ b/migrador_datos.html
@@ -39,8 +39,8 @@
     </style>
 </head>
 
-<body class="p-8 flex items-center justify-center min-h-screen">
-    <div class="w-full max-w-2xl card p-10 space-y-8">
+<body class="p-4 lg:p-8 flex items-center justify-center min-h-screen">
+    <div class="w-full max-w-2xl card p-4 lg:p-10 space-y-8">
         <div class="flex items-center justify-between">
             <div>
                 <h1 class="text-3xl font-black text-gray-900 uppercase italic">Sincronizador de Datos</h1>
