--- a/reportes.html
+++ b/reportes.html
@@ -75,7 +75,7 @@
     <div id="sidebar-container"></div>
 
     <!-- MAIN CONTENT -->
-    <main class="flex-1 ml-64 p-10 space-y-8 min-w-0 overflow-y-auto">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0 overflow-y-auto">
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Reportes</h1>
