--- a/rrhh_analytics.html
+++ b/rrhh_analytics.html
@@ -31,7 +31,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-10 space-y-8">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8">
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-3xl font-extrabold tracking-tight italic uppercase">Analytics de Capital Humano</h1>
