--- a/compras.html
+++ b/compras.html
@@ -61,22 +61,22 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-8 space-y-8">
-        <header class="flex justify-between items-center">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-4 lg:p-8 pt-20 lg:pt-8 space-y-6 lg:space-y-8 min-w-0">
+        <header class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-4 lg:gap-0">
             <div>
                 <nav class="text-[10px] font-bold text-gray-400 uppercase tracking-widest mb-1">Inicio > Gestión de
                     Compras</nav>
-                <h1 class="text-3xl font-extrabold tracking-tight italic uppercase">Módulo de Compras</h1>
+                <h1 class="text-3xl lg:text-3xl font-extrabold tracking-tight italic uppercase">Módulo de Compras</h1>
                 <p class="text-gray-500 text-sm font-medium">Gestiona y monitorea todas las órdenes de suministros
                     agrícolas.</p>
             </div>
             <button onclick="window.location.href='nueva_compra.html'"
-                class="bg-[#19e66b] text-black px-6 py-3 rounded-xl font-black flex items-center gap-2 text-xs shadow-lg shadow-[#19e66b]/20 hover:brightness-105 transition-all">
+                class="w-full lg:w-auto bg-[#19e66b] text-black px-6 py-3 rounded-xl font-black flex items-center justify-center gap-2 text-xs shadow-lg shadow-[#19e66b]/20 hover:brightness-105 transition-all">
                 <span class="material-symbols-outlined text-lg">shopping_cart_checkout</span> Nueva Solicitud de Compra
             </button>
         </header>
 
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6">
             <div class="card p-6 flex items-center justify-between">
                 <div>
                     <p id="lblKpi1" class="text-gray-400 font-bold text-[10px] uppercase tracking-widest mb-1">Pedidos
@@ -116,44 +116,48 @@
             </div>
         </div>
 
-        <div class="flex gap-8 border-b border-gray-200 px-2">
+        <div class="flex gap-4 lg:p-8 border-b border-gray-200 px-2 overflow-x-auto no-scrollbar">
             <button id="tabProceso" onclick="cambiarPestañaCompras('proceso')"
-                class="pb-4 text-xs font-black uppercase tracking-widest tab-active transition-all">En Proceso</button>
+                class="pb-4 text-xs font-black uppercase tracking-widest tab-active transition-all whitespace-nowrap">En
+                Proceso</button>
             <button id="tabCompletado" onclick="cambiarPestañaCompras('completado')"
-                class="pb-4 text-xs font-black uppercase tracking-widest text-gray-400 hover:text-gray-600 transition-all">Completadas</button>
+                class="pb-4 text-xs font-black uppercase tracking-widest text-gray-400 hover:text-gray-600 transition-all whitespace-nowrap">Completadas</button>
             <button id="tabTaller" onclick="cambiarPestañaCompras('taller')"
-                class="pb-4 text-xs font-black uppercase tracking-widest text-gray-400 hover:text-gray-600 transition-all flex items-center gap-2"><span
+                class="pb-4 text-xs font-black uppercase tracking-widest text-gray-400 hover:text-gray-600 transition-all flex items-center gap-2 whitespace-nowrap"><span
                     class="material-symbols-outlined text-sm">build</span> Solicitudes Taller</button>
         </div>
 
         <div class="card overflow-hidden">
-            <div class="p-6 border-b border-gray-100 flex justify-between items-center bg-white">
-                <div class="flex-1 max-w-md relative">
+            <div
+                class="p-4 lg:p-6 border-b border-gray-100 flex flex-col lg:flex-row justify-between items-start lg:items-center bg-white gap-4 lg:gap-0">
+                <div class="flex-1 max-w-md w-full relative">
                     <span class="material-symbols-outlined absolute left-3 top-2.5 text-gray-400 text-xl">search</span>
                     <input type="text" id="busquedaCompras" oninput="filtrarCompras()"
                         placeholder="Buscar por proveedor o solicitante..."
                         class="w-full pl-10 pr-4 py-2 bg-gray-50 border-none rounded-xl text-sm font-semibold focus:ring-2 focus:ring-primary transition-all">
                 </div>
-                <div class="flex gap-2">
-                    <select id="filtroSucursal" onchange="filtrarCompras()"
-                        class="bg-gray-50 border-none rounded-xl text-[10px] font-black uppercase px-4 focus:ring-2 focus:ring-primary">
-                        <option value="Todos">Todas las Sucursales</option>
-                        <option value="M">Matriz</option>
-                        <option value="N">Norte</option>
-                        <option value="S">Sur</option>
-                    </select>
-                    <select id="filtroEstado" onchange="filtrarCompras()"
-                        class="bg-gray-50 border-none rounded-xl text-[10px] font-black uppercase px-4 focus:ring-2 focus:ring-primary">
-                        <option value="Todos">Todos los estados</option>
-                        <option value="Pendiente">Pendiente</option>
-                        <option value="Ordenado">Ordenado</option>
-                        <option value="Parcial">Parcial</option>
-                        <option value="Completo">Completo</option>
-                        <option value="Retrasado">Retrasado</option>
-                    </select>
+                <div class="flex flex-col lg:flex-row gap-2 w-full lg:w-auto">
+                    <div class="flex gap-2">
+                        <select id="filtroSucursal" onchange="filtrarCompras()"
+                            class="flex-1 lg:flex-none bg-gray-50 border-none rounded-xl text-[10px] font-black uppercase px-4 py-2 focus:ring-2 focus:ring-primary h-10">
+                            <option value="Todos">Todas las Sucursales</option>
+                            <option value="M">Matriz</option>
+                            <option value="N">Norte</option>
+                            <option value="S">Sur</option>
+                        </select>
+                        <select id="filtroEstado" onchange="filtrarCompras()"
+                            class="flex-1 lg:flex-none bg-gray-50 border-none rounded-xl text-[10px] font-black uppercase px-4 py-2 focus:ring-2 focus:ring-primary h-10">
+                            <option value="Todos">Todos los estados</option>
+                            <option value="Pendiente">Pendiente</option>
+                            <option value="Ordenado">Ordenado</option>
+                            <option value="Parcial">Parcial</option>
+                            <option value="Completo">Completo</option>
+                            <option value="Retrasado">Retrasado</option>
+                        </select>
+                    </div>
                     <!-- BOTÓN NUEVA SOLICITUD TALLER -->
                     <button id="btnNuevaSolicitudTaller" onclick="abrirModalSolicitudTaller()"
-                        class="hidden bg-black text-white px-4 py-2 rounded-xl text-[10px] font-black uppercase flex items-center gap-2 hover:brightness-110 shadow-lg">
+                        class="hidden w-full lg:w-auto bg-black text-white px-4 py-2 rounded-xl text-[10px] font-black uppercase flex items-center justify-center gap-2 hover:brightness-110 shadow-lg h-10">
                         <span class="material-symbols-outlined text-sm">add_a_photo</span> Nueva Solicitud
                     </button>
                 </div>
@@ -202,9 +206,10 @@
     </main>
 
     <div id="modalVerDetalle"
-        class="fixed inset-0 bg-black/60 hidden z-[100] flex items-center justify-center backdrop-blur-sm p-4">
-        <div class="bg-white w-full max-w-4xl rounded-[2.5rem] shadow-2xl overflow-hidden flex flex-col max-h-[90vh]">
-            <div class="p-8 border-b border-gray-100 bg-gray-50/50 flex justify-between items-center">
+        class="fixed inset-0 bg-black/60 hidden z-[100] flex items-center justify-center backdrop-blur-sm p-4 lg:p-4">
+        <div
+            class="bg-white w-full max-w-4xl rounded-2xl lg:rounded-[2.5rem] shadow-2xl overflow-hidden flex flex-col max-h-[90vh] lg:max-h-[90vh] mx-0 lg:mx-auto">
+            <div class="p-4 lg:p-8 border-b border-gray-100 bg-gray-50/50 flex justify-between items-center">
                 <div>
                     <h3 class="text-xl font-black uppercase italic tracking-tight" id="modalDetalleTitulo">Detalle de
                         Orden</h3>
@@ -222,7 +227,7 @@
                     <span class="material-symbols-outlined text-sm">picture_as_pdf</span> Descargar PDF
                 </button>
             </div>
-            <div class="p-8 grid grid-cols-12 gap-8 overflow-y-auto">
+            <div class="p-4 lg:p-8 grid grid-cols-12 gap-4 lg:p-8 overflow-y-auto">
                 <div class="col-span-4 space-y-6">
                     <div class="bg-gray-50 p-6 rounded-3xl border border-gray-100 space-y-4 font-bold">
                         <div>
@@ -303,7 +308,7 @@
     <!-- MODAL: NUEVA SOLICITUD TALLER -->
     <div id="modalSolicitudTaller"
         class="fixed inset-0 bg-black/80 hidden z-[110] flex items-center justify-center p-4 backdrop-blur-sm">
-        <div class="bg-white rounded-3xl max-w-lg w-full p-8 max-h-[90vh] overflow-y-auto">
+        <div class="bg-white rounded-3xl max-w-lg w-full p-4 lg:p-4 lg:p-8 max-h-[90vh] overflow-y-auto mx-0 lg:mx-auto">
             <h2 class="text-2xl font-black italic uppercase mb-2">Solicitud de Cotización</h2>
             <p class="text-xs text-gray-400 font-bold uppercase tracking-widest mb-6">Taller Mecánico</p>
 
@@ -386,7 +391,7 @@
     <!-- MODAL: GESTIONAR TALLER (ADMIN) -->
     <div id="modalGestionTaller"
         class="fixed inset-0 bg-black/80 hidden z-[110] flex items-center justify-center p-4 backdrop-blur-sm">
-        <div class="bg-white rounded-3xl max-w-2xl w-full p-8 flex flex-col max-h-[90vh]">
+        <div class="bg-white rounded-3xl max-w-2xl w-full p-4 lg:p-4 lg:p-8 flex flex-col max-h-[90vh] mx-0 lg:mx-auto">
             <div class="flex justify-between items-start mb-6">
                 <div>
                     <h2 class="text-2xl font-black italic uppercase">Gestión de Cotización</h2>
@@ -397,7 +402,7 @@
                     class="bg-gray-100 rounded-full p-2"><span class="material-symbols-outlined">close</span></button>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 overflow-y-auto">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 lg:p-8 overflow-y-auto">
                 <!-- COLUMNA IZQUIERDA: EVIDENCIA Y DATOS -->
                 <div class="space-y-4">
                     <div class="aspect-square bg-gray-100 rounded-2xl overflow-hidden relative group">
