--- a/cortes_caja.html
+++ b/cortes_caja.html
@@ -43,7 +43,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-10 space-y-8 min-w-0">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0">
 
         <header class="flex justify-between items-center">
             <div>
@@ -114,7 +114,7 @@
 
     <!-- MODAL: DETALLE CORTE -->
     <div id="modalDetalleCorte" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-        <div class="bg-white rounded-3xl max-w-2xl w-full p-8 max-h-[90vh] overflow-y-auto">
+        <div class="bg-white rounded-3xl max-w-2xl w-full p-4 lg:p-8 max-h-[90vh] overflow-y-auto">
             <div class="flex justify-between items-start mb-6">
                 <div>
                     <h2 class="text-2xl font-black text-gray-800">Detalle de Corte</h2>
@@ -168,7 +168,7 @@
 
     <!-- MODAL: EDITAR CORTE -->
     <div id="modalEditarCorte" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-        <div class="bg-white rounded-3xl max-w-lg w-full p-8">
+        <div class="bg-white rounded-3xl max-w-lg w-full p-4 lg:p-8">
             <h2 class="text-2xl font-black text-gray-800 mb-6">Editar Corte</h2>
             <input type="hidden" id="editIdCorte">
 
