--- a/cuentas_por_cobrar.html
+++ b/cuentas_por_cobrar.html
@@ -64,7 +64,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-10 space-y-8 min-w-0">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0">
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Cuentas por Cobrar</h1>
@@ -83,7 +83,7 @@
         </header>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="card p-8 flex justify-between items-start">
+            <div class="card p-4 lg:p-8 flex justify-between items-start">
                 <div>
                     <p class="text-gray-400 font-bold text-[10px] uppercase tracking-widest mb-2">Total Pendiente</p>
                     <span id="totalPorCobrar" class="text-3xl font-black">$0.00</span>
@@ -91,7 +91,7 @@
                 <div class="p-3 bg-green-50 text-primary rounded-2xl"><span
                         class="material-symbols-outlined text-3xl">account_balance_wallet</span></div>
             </div>
-            <div class="card p-8 flex justify-between items-start border-red-100">
+            <div class="card p-4 lg:p-8 flex justify-between items-start border-red-100">
                 <div>
                     <p class="text-gray-400 font-bold text-[10px] uppercase tracking-widest mb-2">Saldos Vencidos</p>
                     <span id="totalVencido" class="text-3xl font-black text-red-600">$0.00</span>
@@ -102,7 +102,7 @@
                 <div class="p-3 bg-red-50 text-red-500 rounded-2xl"><span
                         class="material-symbols-outlined text-3xl">event_busy</span></div>
             </div>
-            <div class="card p-8 flex justify-between items-start">
+            <div class="card p-4 lg:p-8 flex justify-between items-start">
                 <div>
                     <p class="text-gray-400 font-bold text-[10px] uppercase tracking-widest mb-2">Recuperado este Mes
                     </p>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="card overflow-hidden shadow-sm">
-            <div class="px-8 pt-4 border-b border-gray-100 flex gap-8">
+            <div class="px-8 pt-4 border-b border-gray-100 flex gap-4 lg:p-8">
                 <button onclick="cambiarPestaña('pendiente')" id="tabPendiente"
                     class="pb-4 text-xs font-black uppercase tracking-widest tab-active transition-all">Por
                     Cobrar</button>
@@ -172,7 +172,7 @@
 
     <div id="modalAbono"
         class="fixed inset-0 bg-black/60 hidden z-[110] flex items-center justify-center backdrop-blur-sm transition-all">
-        <div class="bg-white w-full max-w-sm rounded-[2.5rem] shadow-2xl overflow-hidden p-8 space-y-6">
+        <div class="bg-white w-full max-w-sm rounded-[2.5rem] shadow-2xl overflow-hidden p-4 lg:p-8 space-y-6">
             <div class="text-center">
                 <h3 id="tituloModalAbono" class="text-lg font-black uppercase italic">Registrar Entrada</h3>
                 <p id="abonoCliente" class="text-[10px] text-gray-400 font-bold uppercase tracking-widest mt-1"></p>
@@ -222,7 +222,7 @@
     <div id="modalBitacora"
         class="fixed inset-0 bg-black/60 hidden z-[100] flex items-center justify-center backdrop-blur-sm transition-all">
         <div class="bg-white w-full max-w-lg rounded-[2.5rem] shadow-2xl overflow-hidden">
-            <div class="p-8 border-b border-gray-100 flex justify-between items-center bg-gray-50/50">
+            <div class="p-4 lg:p-8 border-b border-gray-100 flex justify-between items-center bg-gray-50/50">
                 <div>
                     <h3 class="text-xl font-black uppercase italic tracking-tight">Bitácora de Cobranza</h3>
                     <p id="clienteBitacora" class="text-[10px] text-primary font-black uppercase mt-1 tracking-widest">
@@ -232,7 +232,7 @@
                     class="size-10 rounded-full hover:bg-gray-200 flex items-center justify-center"><span
                         class="material-symbols-outlined text-gray-400">close</span></button>
             </div>
-            <div class="p-8 space-y-6">
+            <div class="p-4 lg:p-8 space-y-6">
                 <div>
                     <label class="text-[9px] font-black uppercase text-gray-400 block mb-2">Resultado de la
                         Gestión</label>
@@ -251,7 +251,7 @@
                     <div id="historialNotas" class="space-y-3 max-h-[180px] overflow-y-auto pr-2"></div>
                 </div>
             </div>
-            <div class="p-8 bg-gray-50/50 border-t border-gray-100">
+            <div class="p-4 lg:p-8 bg-gray-50/50 border-t border-gray-100">
                 <button onclick="guardarGestion()"
                     class="w-full bg-black text-white py-4 rounded-2xl font-black uppercase text-[11px] tracking-widest shadow-lg shadow-black/10">Guardar
                     Gestión</button>
