--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body class="bg-background-light dark:bg-background-dark flex items-center justify-center min-h-screen p-4">
     <div
         class="w-full max-w-md bg-white dark:bg-[#1a2e22] rounded-2xl shadow-2xl border border-[#dce5df] dark:border-[#2a3a30] overflow-hidden">
-        <div class="p-8">
+        <div class="p-4 lg:p-8">
             <div class="flex flex-col items-center mb-8">
                 <div
                     class="size-12 bg-primary rounded-xl flex items-center justify-center text-background-dark mb-4 shadow-lg shadow-primary/20">
