--- a/inventario.html
+++ b/inventario.html
@@ -58,7 +58,7 @@
     <div id="sidebar-container"></div>
 
     <!-- MAIN CONTENT -->
-    <main class="flex-1 ml-64 p-10 space-y-8 min-w-0 overflow-y-auto">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0 overflow-y-auto">
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Inventario Mensual</h1>
@@ -81,7 +81,7 @@
         <section>
             <h3 class="text-sm font-black uppercase tracking-widest text-gray-400 mb-4">Costo de Ventas por Mes</h3>
             <div id="costoVentasContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <div class="text-center p-8 text-gray-400 italic text-sm col-span-full">
+                <div class="text-center p-4 lg:p-8 text-gray-400 italic text-sm col-span-full">
                     Cargando datos...
                 </div>
             </div>
@@ -111,7 +111,7 @@
             </div>
 
             <div id="historicoContainer">
-                <div class="text-center p-10 text-gray-400 italic">Cargando registros...</div>
+                <div class="text-center p-4 lg:p-10 text-gray-400 italic">Cargando registros...</div>
             </div>
         </section>
     </main>
@@ -119,7 +119,7 @@
     <!-- MODAL -->
     <div id="modalInventario"
         class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden z-[100] flex items-center justify-center opacity-0 transition-opacity duration-300">
-        <div class="bg-white w-full max-w-md rounded-2xl shadow-2xl transform scale-95 transition-all duration-300 p-8">
+        <div class="bg-white w-full max-w-md rounded-2xl shadow-2xl transform scale-95 transition-all duration-300 p-4 lg:p-8">
             <div class="flex justify-between items-center mb-8">
                 <div>
                     <h3 class="text-2xl font-extrabold tracking-tight" id="modalTitle">Nuevo Registro</h3>
