--- a/nueva_compra.html
+++ b/nueva_compra.html
@@ -29,7 +29,7 @@
         .file-custom input[type=file] { position: absolute; left: 0; top: 0; opacity: 0; cursor: pointer; height: 100%; width: 100%; }
     </style>
 </head>
-<body class="min-h-screen p-8 flex flex-col items-center">
+<body class="min-h-screen p-4 lg:p-8 flex flex-col items-center">
 
     <div class="w-full max-w-5xl space-y-6">
         <header class="flex justify-between items-center">
@@ -45,8 +45,8 @@
             </div>
         </header>
 
-        <div class="grid grid-cols-12 gap-8">
-            <div class="col-span-4 bg-white p-8 rounded-[2rem] border border-gray-100 shadow-sm space-y-6 self-start">
+        <div class="grid grid-cols-12 gap-4 lg:p-8">
+            <div class="col-span-4 bg-white p-4 lg:p-8 rounded-[2rem] border border-gray-100 shadow-sm space-y-6 self-start">
                 <div class="flex items-center gap-2 text-[#19e66b]">
                     <span class="material-symbols-outlined font-black">info</span>
                     <h2 class="font-black text-xs uppercase tracking-widest text-black">Información General</h2>
@@ -94,7 +94,7 @@
                 </div>
             </div>
 
-            <div class="col-span-8 bg-white p-8 rounded-[2rem] border border-gray-100 shadow-sm space-y-6">
+            <div class="col-span-8 bg-white p-4 lg:p-8 rounded-[2rem] border border-gray-100 shadow-sm space-y-6">
                 <div class="flex justify-between items-center">
                     <div class="flex items-center gap-2 text-[#19e66b]">
                         <span class="material-symbols-outlined font-black">list_alt</span>
