--- a/productos.html
+++ b/productos.html
@@ -91,7 +91,7 @@
 <body class="min-h-screen text-[#1e293b] flex">
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-10 space-y-8">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8">
         <!-- HEADER -->
         <header class="flex justify-between items-end">
             <div>
@@ -205,7 +205,7 @@
     <div id="modalProducto"
         class="fixed inset-0 bg-slate-900/60 hidden z-[150] flex items-center justify-center backdrop-blur-md p-4">
         <div class="bg-white w-full max-w-3xl rounded-[2.5rem] shadow-2xl overflow-hidden flex flex-col max-h-[90vh]">
-            <div class="p-8 border-b border-slate-100 bg-slate-50/50 flex justify-between items-center">
+            <div class="p-4 lg:p-8 border-b border-slate-100 bg-slate-50/50 flex justify-between items-center">
                 <h3 id="tituloModalProducto" class="text-2xl font-black uppercase italic text-slate-800">Nuevo Producto
                 </h3>
                 <button onclick="cerrarModalProducto()"
@@ -213,11 +213,11 @@
                     <span class="material-symbols-outlined text-3xl">close</span>
                 </button>
             </div>
-            <form id="formProducto" class="flex-1 overflow-y-auto p-8 space-y-8">
+            <form id="formProducto" class="flex-1 overflow-y-auto p-4 lg:p-8 space-y-8">
                 <input type="hidden" id="editProductoId">
 
                 <!-- SECCIÓN: IMAGEN -->
-                <div class="flex gap-8">
+                <div class="flex gap-4 lg:p-8">
                     <div class="w-40">
                         <div onclick="document.getElementById('inputImagenProducto').click()"
                             class="size-40 rounded-3xl photo-upload-zone relative overflow-hidden group">
@@ -440,7 +440,7 @@
                     </div>
                 </div>
             </form>
-            <div class="p-8 bg-slate-50 border-t border-slate-100 flex gap-4">
+            <div class="p-4 lg:p-8 bg-slate-50 border-t border-slate-100 flex gap-4">
                 <button type="button" onclick="cerrarModalProducto()"
                     class="flex-1 py-4 text-sm font-bold text-slate-500 hover:text-slate-700">Cancelar</button>
                 <button type="button" onclick="guardarProducto()"
@@ -455,7 +455,7 @@
     <div id="modalImportar"
         class="fixed inset-0 bg-slate-900/60 hidden z-[150] flex items-center justify-center backdrop-blur-md p-4">
         <div class="bg-white w-full max-w-4xl rounded-[2.5rem] shadow-2xl overflow-hidden flex flex-col max-h-[90vh]">
-            <div class="p-8 border-b border-slate-100 bg-slate-50/50 flex justify-between items-center">
+            <div class="p-4 lg:p-8 border-b border-slate-100 bg-slate-50/50 flex justify-between items-center">
                 <div>
                     <h3 class="text-2xl font-black uppercase italic text-slate-800">Importar Productos</h3>
                     <p class="text-sm text-slate-400 mt-1">Carga masiva desde archivo Excel (.xlsx)</p>
@@ -465,7 +465,7 @@
                     <span class="material-symbols-outlined text-3xl">close</span>
                 </button>
             </div>
-            <div class="flex-1 overflow-y-auto p-8">
+            <div class="flex-1 overflow-y-auto p-4 lg:p-8">
                 <!-- ZONA DE CARGA -->
                 <div id="zonaDropExcel" onclick="document.getElementById('inputExcel').click()"
                     class="photo-upload-zone rounded-3xl p-12 flex flex-col items-center justify-center cursor-pointer">
@@ -543,7 +543,7 @@
                     </div>
                 </div>
             </div>
-            <div class="p-8 bg-slate-50 border-t border-slate-100 flex gap-4">
+            <div class="p-4 lg:p-8 bg-slate-50 border-t border-slate-100 flex gap-4">
                 <button type="button" onclick="cerrarModalImportar()"
                     class="flex-1 py-4 text-sm font-bold text-slate-500">Cancelar</button>
                 <button id="btnConfirmarImport" type="button" onclick="confirmarImportacion()" disabled
@@ -558,14 +558,14 @@
     <div id="modalTransferencia"
         class="fixed inset-0 bg-slate-900/60 hidden z-[150] flex items-center justify-center backdrop-blur-md p-4">
         <div class="bg-white w-full max-w-md rounded-[2.5rem] shadow-2xl overflow-hidden">
-            <div class="p-8 border-b border-slate-100 bg-slate-50/50 flex justify-between items-center">
+            <div class="p-4 lg:p-8 border-b border-slate-100 bg-slate-50/50 flex justify-between items-center">
                 <h3 class="text-xl font-black uppercase italic text-slate-800">Transferir Stock</h3>
                 <button onclick="cerrarModalTransferencia()"
                     class="size-10 rounded-xl hover:bg-slate-200 flex items-center justify-center text-slate-400">
                     <span class="material-symbols-outlined">close</span>
                 </button>
             </div>
-            <div class="p-8 space-y-6">
+            <div class="p-4 lg:p-8 space-y-6">
                 <input type="hidden" id="transferProductoId">
                 <p id="transferProductoNombre" class="text-center font-black text-lg text-slate-700"></p>
 
@@ -602,7 +602,7 @@
                         placeholder="Motivo de la transferencia...">
                 </div>
             </div>
-            <div class="p-8 bg-slate-50 border-t border-slate-100">
+            <div class="p-4 lg:p-8 bg-slate-50 border-t border-slate-100">
                 <button type="button" onclick="ejecutarTransferencia()"
                     class="w-full bg-primary text-black py-4 rounded-2xl font-black uppercase text-sm shadow-lg shadow-primary/20 hover:scale-[1.02] transition-all flex items-center justify-center gap-2">
                     <span class="material-symbols-outlined">sync_alt</span> Confirmar Transferencia
