--- a/registro_multiple.html
+++ b/registro_multiple.html
@@ -43,7 +43,7 @@
         </div>
     </header>
 
-    <main class="flex-1 p-4 full-container w-full mb-32">
+    <main class="pt-20 lg:pt-0 flex-1 p-4 full-container w-full mb-32">
         <div class="bg-white rounded-[1.5rem] border border-gray-200 shadow-sm overflow-hidden p-4">
             <div class="overflow-x-auto">
                 <table class="w-full text-left border-separate border-spacing-x-0 border-spacing-y-1">
@@ -74,7 +74,7 @@
 
         <div class="fixed bottom-6 left-1/2 -translate-x-1/2 w-full max-w-[1550px] px-4 z-50">
             <div class="bg-white p-6 rounded-[2rem] border border-gray-200 shadow-2xl flex justify-between items-center">
-                <div class="flex gap-10">
+                <div class="flex gap-4 lg:p-10">
                     <div>
                         <p class="text-[9px] font-black text-gray-400 uppercase tracking-widest mb-1">Total Entradas</p>
                         <p id="contadorFilas" class="text-2xl font-black text-black">0 Ingresos</p>
