--- a/rrhh_empleados.html
+++ b/rrhh_empleados.html
@@ -171,7 +171,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-10 space-y-10">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-10">
         <header class="flex justify-between items-end">
             <div>
                 <h1 class="text-4xl font-extrabold tracking-tight text-slate-900 italic uppercase">Central de Empleados
@@ -191,7 +191,7 @@
             </div>
         </header>
 
-        <div class="bg-white p-8 rounded-[2rem] border border-slate-100 shadow-sm flex items-center gap-6">
+        <div class="bg-white p-4 lg:p-8 rounded-[2rem] border border-slate-100 shadow-sm flex items-center gap-6">
             <div class="flex-1 relative">
                 <span class="material-symbols-outlined absolute left-6 top-4 text-slate-300">search</span>
                 <input type="text" id="busquedaInput" oninput="filtrarEmpleados()"
@@ -214,11 +214,11 @@
             </div>
         </div>
 
-        <div id="gridEmpleados" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-5 gap-10"></div>
+        <div id="gridEmpleados" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-5 gap-4 lg:p-10"></div>
     </main>
 
     <div id="slideExpediente" class="slide-over">
-        <div class="p-8 border-b border-slate-50 flex justify-between items-start">
+        <div class="p-4 lg:p-8 border-b border-slate-50 flex justify-between items-start">
             <h2 class="text-2xl font-black uppercase italic text-slate-900 tracking-tight">Expediente de Empleado</h2>
             <button onclick="cerrarExpediente()"
                 class="size-10 rounded-full hover:bg-slate-100 flex items-center justify-center transition-colors">
@@ -226,7 +226,7 @@
             </button>
         </div>
 
-        <div id="headerExpediente" class="px-8 pt-8 flex items-center gap-8"></div>
+        <div id="headerExpediente" class="px-8 pt-8 flex items-center gap-4 lg:p-8"></div>
 
         <div class="px-8 mt-7 flex gap-7 border-b border-slate-100 overflow-x-auto">
             <button onclick="cambiarTabExpediente('personal')" class="tab-btn active"
@@ -237,9 +237,9 @@
             <button onclick="cambiarTabExpediente('historial')" class="tab-btn" id="tab-historial">Historial</button>
         </div>
 
-        <div id="detalleExpediente" class="flex-1 overflow-y-auto p-8 space-y-10"></div>
+        <div id="detalleExpediente" class="flex-1 overflow-y-auto p-4 lg:p-8 space-y-10"></div>
 
-        <div class="p-8 border-t border-slate-100">
+        <div class="p-4 lg:p-8 border-t border-slate-100">
             <button id="btnEditarCompleto"
                 class="w-full bg-primary text-black py-6 rounded-[1.5rem] font-black uppercase text-sm shadow-xl shadow-primary/20 hover:scale-[1.02] transition-all flex items-center justify-center gap-4">
                 <span class="material-symbols-outlined text-xl font-bold">edit</span> Editar Perfil Completo
@@ -250,7 +250,7 @@
     <div id="modalNuevoEmpleado"
         class="fixed inset-0 bg-slate-900/60 hidden z-[150] flex items-center justify-center backdrop-blur-md p-4">
         <div class="bg-white w-full max-w-4xl rounded-[3rem] shadow-2xl overflow-hidden flex flex-col max-h-[95vh]">
-            <div class="p-10 border-b border-slate-50 bg-slate-50/50 flex justify-between items-center">
+            <div class="p-4 lg:p-10 border-b border-slate-50 bg-slate-50/50 flex justify-between items-center">
                 <div class="flex gap-6 items-center">
                     <div id="stepCircle"
                         class="size-16 bg-primary rounded-3xl flex items-center justify-center text-black font-black text-2xl shadow-lg">
@@ -291,7 +291,7 @@
                     <div class="col-span-2 space-y-8">
                         <div><label class="label-form">Nombre Completo</label><input type="text" id="nombre_completo"
                                 class="input-form uppercase" placeholder="Ej: Juan Pérez López" required></div>
-                        <div class="grid grid-cols-2 gap-8">
+                        <div class="grid grid-cols-2 gap-4 lg:p-8">
                             <div><label class="label-form">Fecha Nacimiento</label><input type="date"
                                     id="fecha_nacimiento" class="input-form" onchange="calcularEdad(this.value)"></div>
                             <div><label class="label-form">Edad</label><input type="number" id="edad"
@@ -313,7 +313,7 @@
                             type="text" id="nss" class="input-form" placeholder="11 Dígitos"></div>
                 </div>
 
-                <div id="step2" class="step-content hidden grid grid-cols-2 gap-10">
+                <div id="step2" class="step-content hidden grid grid-cols-2 gap-4 lg:p-10">
                     <div class="col-span-2"><label class="label-form">Dirección Residencial Completa</label><input
                             type="text" id="direccion_completa" class="input-form uppercase"
                             placeholder="Calle, Número, Colonia, CP"></div>
@@ -331,7 +331,7 @@
                         </select></div>
                 </div>
 
-                <div id="step3" class="step-content hidden grid grid-cols-2 gap-10">
+                <div id="step3" class="step-content hidden grid grid-cols-2 gap-4 lg:p-10">
                     <div><label class="label-form">Sucursal Asignada</label><select id="sucursal" class="input-form">
                             <option>MATRIZ</option>
                             <option>NORTE</option>
@@ -427,7 +427,7 @@
                 </div>
             </form>
 
-            <div class="p-10 bg-slate-50 border-t border-slate-100 flex gap-6">
+            <div class="p-4 lg:p-10 bg-slate-50 border-t border-slate-100 flex gap-6">
                 <button id="btnAnterior" onclick="cambiarPaso(-1)"
                     class="hidden flex-1 py-5 text-base font-black uppercase text-gray-400 hover:text-gray-600 transition-all">Anterior</button>
                 <button id="btnSiguiente" onclick="cambiarPaso(1)"
