--- a/rrhh_nomina.html
+++ b/rrhh_nomina.html
@@ -49,7 +49,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-10 space-y-8">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8">
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-3xl font-extrabold tracking-tight italic uppercase">Centro de Gestión de Nómina</h1>
@@ -142,7 +142,7 @@
     </main>
 
     <div id="barAccionesMasivas"
-        class="fixed bottom-10 left-1/2 -translate-x-1/2 bg-slate-900 text-white p-4 rounded-3xl shadow-2xl flex items-center gap-8 px-8 z-[100] hidden animate-in fade-in slide-in-from-bottom-4">
+        class="fixed bottom-10 left-1/2 -translate-x-1/2 bg-slate-900 text-white p-4 rounded-3xl shadow-2xl flex items-center gap-4 lg:p-8 px-8 z-[100] hidden animate-in fade-in slide-in-from-bottom-4">
         <div class="flex items-center gap-4">
             <span id="countSeleccionados"
                 class="size-8 bg-primary text-black rounded-full flex items-center justify-center font-black">0</span>
@@ -166,7 +166,7 @@
     <!-- Modal Edición Nómina -->
     <div id="modalNomina"
         class="fixed inset-0 bg-slate-900/50 hidden z-[200] flex items-center justify-center backdrop-blur-sm transition-all opacity-0">
-        <div class="bg-white p-8 rounded-3xl shadow-2xl w-full max-w-md scale-95 transition-all transform"
+        <div class="bg-white p-4 lg:p-8 rounded-3xl shadow-2xl w-full max-w-md scale-95 transition-all transform"
             id="modalNominaContent">
             <h3 class="text-xl font-black text-slate-800 mb-1">Ajustar Nómina</h3>
             <p id="modalEmpleadoNombre" class="text-sm text-slate-400 font-bold uppercase mb-6">Empleado</p>
@@ -216,7 +216,7 @@
     <!-- Modal Aprobar Pagos (Desglose) -->
     <div id="modalPagoNomina"
         class="fixed inset-0 bg-slate-900/50 hidden z-[200] flex items-center justify-center backdrop-blur-sm transition-all opacity-0">
-        <div class="bg-white p-8 rounded-3xl shadow-2xl w-full max-w-4xl scale-95 transition-all transform flex flex-col max-h-[90vh]"
+        <div class="bg-white p-4 lg:p-8 rounded-3xl shadow-2xl w-full max-w-4xl scale-95 transition-all transform flex flex-col max-h-[90vh]"
             id="modalPagoContent">
             <div class="mb-6">
                 <h3 class="text-xl font-black text-slate-800 mb-1">Confirmar Distribución de Pagos</h3>
