--- a/rrhh_organigrama.html
+++ b/rrhh_organigrama.html
@@ -103,7 +103,7 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 ml-64 p-10 space-y-8 flex flex-col">
+    <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 flex flex-col">
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-3xl font-extrabold tracking-tight italic uppercase">Organigrama Dinámico</h1>
@@ -156,7 +156,7 @@
             </div>
 
             <aside id="panelDetalle"
-                class="w-80 bg-white border-l border-slate-100 p-8 translate-x-full transition-transform duration-300 shadow-2xl">
+                class="w-80 bg-white border-l border-slate-100 p-4 lg:p-8 translate-x-full transition-transform duration-300 shadow-2xl">
                 <div class="flex justify-between items-start mb-8">
                     <div class="size-20 rounded-full border-4 border-primary/20 p-1">
                         <img id="detFoto" src="" class="w-full h-full rounded-full object-cover">
@@ -213,7 +213,7 @@
         <div id="modalNuevoEmpleado" class="fixed inset-0 z-50 hidden">
             <div class="absolute inset-0 bg-slate-900/40 backdrop-blur-sm transition-opacity"
                 onclick="cerrarModalEmpleado()"></div>
-            <div class="absolute right-0 top-0 h-full w-[400px] bg-white shadow-2xl p-8 flex flex-col transform transition-transform duration-300 translate-x-full"
+            <div class="absolute right-0 top-0 h-full w-[400px] bg-white shadow-2xl p-4 lg:p-8 flex flex-col transform transition-transform duration-300 translate-x-full"
                 id="panelNuevoEmpleado">
                 <div class="flex justify-between items-center mb-8">
                     <h2 class="text-xl font-black uppercase italic">Alta Rápida</h2>
