--- a/rrhh_tareas.html
+++ b/rrhh_tareas.html
@@ -55,10 +55,10 @@
 
     <div id="sidebar-container"></div>
 
-    <main class="flex-1 lg:ml-64 p-6 md:p-8 overflow-y-auto bg-slate-50/50 flex flex-col lg:flex-row gap-6">
+    <main class="pt-20 lg:pt-0 flex-1  p-6 md:p-4 lg:p-8 overflow-y-auto bg-slate-50/50 flex flex-col lg:flex-row gap-6">
 
         <!-- COLUMNA PRINCIPAL -->
-        <div class="flex-1 flex flex-col gap-8 min-w-0">
+        <div class="flex-1 flex flex-col gap-4 lg:p-8 min-w-0">
 
             <!-- HEADER -->
             <header class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4">
@@ -327,7 +327,7 @@
                     <span class="material-symbols-outlined font-bold">close</span>
                 </button>
             </div>
-            <div class="p-8 space-y-6">
+            <div class="p-4 lg:p-8 space-y-6">
                 <input type="hidden" id="inputTareaId">
                 <div>
                     <label class="block text-xs font-black text-slate-400 uppercase tracking-widest mb-2">Título de la
