--- a/sync_pagos_historicos.html
+++ b/sync_pagos_historicos.html
@@ -17,9 +17,9 @@
     </style>
 </head>
 
-<body class="bg-gray-100 min-h-screen p-8">
+<body class="bg-gray-100 min-h-screen p-4 lg:p-8">
     <div class="max-w-4xl mx-auto">
-        <div class="bg-white rounded-3xl shadow-xl p-8 mb-6">
+        <div class="bg-white rounded-3xl shadow-xl p-4 lg:p-8 mb-6">
             <h1 class="text-2xl font-black uppercase mb-2">🔄 Sincronizar Pagos Históricos</h1>
             <p class="text-gray-500 text-sm mb-6">Esta herramienta busca pagos registrados en la bitácora de cobranza
                 que no tienen su registro correspondiente en Ingresos.</p>
