--- a/ventas.html
+++ b/ventas.html
@@ -74,9 +74,9 @@
     <div id="sidebar-container" class="shrink-0"></div>
 
     <!-- Content Area -->
-    <main class="flex-1 min-w-0 bg-gray-50 h-screen overflow-hidden">
+    <main class="pt-20 lg:pt-0 flex-1 min-w-0 bg-gray-50 h-screen overflow-hidden">
         <!-- PANTALLA 1: SELECCIÓN DE CAJA -->
-        <div id="pantallaSeleccionCaja" class="h-full flex items-center justify-center p-8 overflow-y-auto">
+        <div id="pantallaSeleccionCaja" class="h-full flex items-center justify-center p-4 lg:p-8 overflow-y-auto">
             <div class="max-w-2xl w-full">
                 <div class="text-center mb-12">
                     <div class="size-16 bg-primary/10 rounded-2xl flex items-center justify-center mx-auto mb-4">
@@ -89,7 +89,7 @@
                 <div class="grid grid-cols-2 gap-6" id="contenedorCajas">
                     <!-- Caja Norte -->
                     <button onclick="seleccionarCaja('Norte')"
-                        class="caja-btn pos-card p-8 text-left hover:border-blue-300 group">
+                        class="caja-btn pos-card p-4 lg:p-8 text-left hover:border-blue-300 group">
                         <div class="flex items-center gap-4 mb-4">
                             <div class="size-12 bg-blue-100 rounded-xl flex items-center justify-center">
                                 <span class="material-symbols-outlined text-blue-600">store</span>
@@ -107,7 +107,7 @@
 
                     <!-- Caja Sur -->
                     <button onclick="seleccionarCaja('Sur')"
-                        class="caja-btn pos-card p-8 text-left hover:border-emerald-300 group">
+                        class="caja-btn pos-card p-4 lg:p-8 text-left hover:border-emerald-300 group">
                         <div class="flex items-center gap-4 mb-4">
                             <div class="size-12 bg-emerald-100 rounded-xl flex items-center justify-center">
                                 <span class="material-symbols-outlined text-emerald-600">store</span>
@@ -297,7 +297,7 @@
 <!-- MODAL: ABRIR CAJA                            -->
 <!-- ============================================= -->
 <div id="modalAbrirCaja" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-    <div class="bg-white rounded-3xl max-w-md w-full p-8">
+    <div class="bg-white rounded-3xl max-w-md w-full p-4 lg:p-8">
         <div class="text-center mb-6">
             <div class="size-16 bg-primary/10 rounded-2xl flex items-center justify-center mx-auto mb-4">
                 <span class="material-symbols-outlined text-3xl text-primary">lock_open</span>
@@ -468,7 +468,7 @@
 <!-- MODAL: COBRAR                                -->
 <!-- ============================================= -->
 <div id="modalCobrar" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-    <div class="bg-white rounded-3xl max-w-lg w-full p-8 max-h-[90vh] overflow-y-auto">
+    <div class="bg-white rounded-3xl max-w-lg w-full p-4 lg:p-8 max-h-[90vh] overflow-y-auto">
         <div class="text-center mb-6">
             <h2 class="text-2xl font-black text-gray-800">Cobrar Venta</h2>
             <p class="text-4xl font-black text-primary mt-2" id="totalCobrarModal">$0.00</p>
@@ -577,7 +577,7 @@
 <!-- MODAL: STOCK INSUFICIENTE                    -->
 <!-- ============================================= -->
 <div id="modalStockInsuficiente" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-    <div class="bg-white rounded-3xl max-w-md w-full p-8 text-center">
+    <div class="bg-white rounded-3xl max-w-md w-full p-4 lg:p-8 text-center">
         <div class="size-16 bg-orange-100 rounded-2xl flex items-center justify-center mx-auto mb-4">
             <span class="material-symbols-outlined text-3xl text-orange-500">inventory</span>
         </div>
@@ -608,7 +608,7 @@
 <!-- MODAL: MOVIMIENTO DE CAJA                    -->
 <!-- ============================================= -->
 <div id="modalMovimientoCaja" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-    <div class="bg-white rounded-3xl max-w-md w-full p-8">
+    <div class="bg-white rounded-3xl max-w-md w-full p-4 lg:p-8">
         <h2 class="text-xl font-black text-gray-800 mb-6" id="tituloMovimientoCaja">Entrada de Efectivo</h2>
         <input type="hidden" id="tipoMovimientoCaja">
 
@@ -642,7 +642,7 @@
 <!-- MODAL: CORTE DE CAJA                         -->
 <!-- ============================================= -->
 <div id="modalCorteCaja" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-    <div class="bg-white rounded-3xl max-w-2xl w-full p-8 max-h-[90vh] overflow-y-auto">
+    <div class="bg-white rounded-3xl max-w-2xl w-full p-4 lg:p-8 max-h-[90vh] overflow-y-auto">
         <div class="text-center mb-6">
             <div class="size-16 bg-red-100 rounded-2xl flex items-center justify-center mx-auto mb-4">
                 <span class="material-symbols-outlined text-3xl text-red-500">receipt_long</span>
@@ -737,7 +737,7 @@
 <!-- MODAL: VENTA EXITOSA                         -->
 <!-- ============================================= -->
 <div id="modalVentaExitosa" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
-    <div class="bg-white rounded-3xl max-w-md w-full p-8 text-center">
+    <div class="bg-white rounded-3xl max-w-md w-full p-4 lg:p-8 text-center">
         <div class="size-20 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-4">
             <span class="material-symbols-outlined text-5xl text-green-500">check_circle</span>
         </div>
